@@ -1,5 +1,5 @@
 <?php
 
-  $version = '0.1.4';
+	$version = '0.1.5';
 
 ?>
