@@ -17,7 +17,7 @@
 	require_once '../../../lib/table/business.php';
 
 	echo $adminUIRender->renderAdminHtmlTop('../../', 'Create Business', 'Create a new business to manage in UltiScape.');
-	echo $adminUIRender->renderAdminTopBarDropdownScripts('../../');
+	echo $adminUIRender->renderAdminUIMenuToggleScripts('../../');
 
 ?>
 
