@@ -37,10 +37,8 @@
     }
 
     if ($result == 'incomplete') {
-        // Link the current admin to the new business
         require_once '../../../../../lib/database.php'; $db = new database();
-        require_once '../../../../../lib/table/tableUuid.php'; $uuid = new tableUuid('adminBusinessBridge', 'adminBusinessId');
-        
+        // Link the current admin to the new business
         if ($db->insert("adminBusinessBridge", array("businessId" => $newBusiness->businessId, "adminId" => $_SESSION['ultiscape_adminId'], "adminIsOwner" => 1, "dateTimeAdded" => date('Y-m-d H:i:s')))) {
             $result = 'success';
             // Set the current business to the new one
